fix spacing error

--- a/tip_app_main/static/tip_app_main/main.css
+++ b/tip_app_main/static/tip_app_main/main.css
@@ -436,8 +436,8 @@ secondary.dropdown-toggle{
 }
 
 .col_user_body{
-    width: 120px;
-    min-width: 120px;
+    width: 150px;
+    /* min-width: 1px; */
     text-align: center;
 }
 
